--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,5 @@
 <h2>購入者情報登録</h2>
-<%= form_tag("carts/confirm", :class => "cust-detail") do  %>
+<%= form_tag(carts_confirm_path, :class => "cust-detail") do  %>
 
 <table id="cust-detail-table" border="2">
   <tr>
